# Snake-game

./: .gitignore  CMakeLists.txt  README.md  changelog.md
assets/: config.txt
include/: Cell.hpp  Config.hpp  Difficulty.hpp  Direction.hpp  Game.hpp  Player.hpp  Snake.hpp
src/: Config.cpp  Game.cpp  Player.cpp  Snake.cpp  main.cpp
